# kure-your-boilerplate

./: LICENSE  kure-your-boilerplate.cabal
Language/KURE/: Boilerplate.hs
test/: Exp.hs  Test.hs  Test2.hs  Test3.hs
